# qdrant_dust

./: .gitignore  README.md  ingestion_pipeline.py  main.py  practice.ipynb  practice2.ipynb  pyproject.toml  rag_service.py  requirements.txt  retrieval_pipeline.py  streamlit_app.py
