[project]
name = "qdrant-dust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.33",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "pypdf>=6.1.1",
    "qdrant-client>=1.15.1",
    "rank-bm25>=0.2.2",
    "sec-edgar-downloader>=5.0.3",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]
